$Id: NEWS,v 1.306 2002-12-05 22:47:47 castaglia Exp $

CVS
---------------------------------
- Bug 1597 - Problems with HP-UX 10/11 trusted systems, mod_pam, and mod_unixpw.
- Bug 1482 - Add new %U meta to LogFormat, for logging original username.
- Bug 1683 - Handling of VirtualHosts on startup.  Now, rather than dying
  when unable to resolve a <VirtualHost> DNS hostname when starting up, the
  daemon will log the error, and skip the bad <VirtualHost>.
- Bug 1825 - AUTH macro namespace cleanup.  A "PR_" prefix has been added to
  the AUTH_* macros, to help prevent namespace collisions.  This means that
  some third-party auth modules may need to be updated.
- Bug 1806 - Add RFC2389 support.
- Bug 1833 - Add ability to have add'l module initialization callback.
- Bug 1743 - No magic cookie for number of files transfered.  New cookies
  added for Display* files: "%i" for total number of files uploaded (read "in")
  during a session, "%o" for total number of files download (written "out")
  during a session, and "%t" for total number of files transferred (both
  uploaded and downloaded).
- Bug 1653 - Complete the FS API abstraction implementation.  The Developer
  Guide will have the complete details on using this API.
- Bug 1712 - TLS support.  mod_tls-2.0.5 has been added to the distribution.
  Many, many thanks to Peter Runestig for his work on this, and for maintaining
  his code through so many versions of ProFTPD.
- Bug 1788 - Add ability to configure auth module checking order.  This is
  now configurable via the new AuthOrder directive.

1.2.7 - Released 05-12-2002
---------------------------------
- Bug 1840 - Problem with syslog default destination on HP-UX.  HPUX uses
  a default device of /dev/log.un rather than /dev/log.
- Bug 1844 - DisplayLogin %y macro is off by 1.  Consequence of scoreboarding
  code changes.
- Bug 1838 - Since 1.2.6: in add_useralias() setting flag CF_MERGEDOWN breaks